tests/ui/rfcs/rfc-2093-infer-outlives/explicit-struct.stderr
error: rustc_outlives
  --> $DIR/explicit-struct.rs:4:1
   |
LL | struct Foo<'b, U> {
   | ^^^^^^^^^^^^^^^^^
   |
   = note: U: 'b

error: aborting due to 1 previous error

